dsl/parser/snapshots/dsl_parser__tests__comments.snap
---
source: dsl/parser/lib.rs
description: "input: \n        // Hi shjdfsdhjfjhsdnjfhsdjnfj\n        // sdfjksnfjnskdfnjsndkfsj\n        #[ignore = \"flaky\"]\n        test(test_single, \"SELECT 1\")"
expression: res
---
Test {
    kind: Default,
    mode: Normal,
    ident: "test_single",
    statement: Single(
        "SELECT 1",
    ),
    values: [],
    options: Some(
        "flaky",
    ),
}
