dsl/parser/snapshots/dsl_parser__tests__error-2.snap
---
source: dsl/parser/lib.rs
description: "input: test_error(test_error, [\"SELECT\", \"INSERT\", \"DELETE\"])"
expression: res
---
Test {
    kind: Default,
    mode: Error,
    ident: "test_error",
    statement: Many(
        [
            "\"SELECT\"",
            "\"INSERT\"",
            "\"DELETE\"",
        ],
    ),
    values: [
        [],
    ],
}
