dsl/parser/snapshots/dsl_parser__tests__error.snap
---
source: dsl/parser/lib.rs
description: "input: test_error(test_error, \"SELECT\")"
expression: res
---
Test {
    kind: Default,
    mode: Error,
    ident: "test_error",
    statement: Single(
        "SELECT",
    ),
    values: [
        [],
    ],
    options: None,
}
