dsl/parser/snapshots/dsl_parser__tests__many_statements_1.snap
---
source: dsl/parser/lib.rs
description: "input: test(test_many, [SELECT,])"
expression: res
---
Test {
    databases: None,
    ident: "test_many",
    statement: Many(
        [
            "SELECT",
        ],
    ),
    values: [
        [],
    ],
}
