dsl/parser/snapshots/dsl_parser__tests__single_statement-2.snap
---
source: dsl/parser/lib.rs
description: "input: test(test_single, \"SELECT 1 '\")"
expression: res
---
Test {
    kind: Default,
    mode: Normal,
    ident: "test_single",
    statement: Single(
        "SELECT 1 '",
    ),
    values: [
        [],
    ],
}
