dsl/parser/snapshots/dsl_parser__tests__single_statement.snap
---
source: dsl/parser/lib.rs
description: "input: test(test_single, SELECT)"
expression: res
---
Test {
    databases: None,
    ident: "test_single",
    statement: Single(
        "SELECT",
    ),
    values: [],
}
